DLL version 2.2 (6/10/2003)
* \r\n converts to newline in Multiline edit box
* Support for multiline edit box
* Better tab order in DirRequest and FileRequest
* Added READONLY option to text box
* Minor fixes

DLL version 2.1 (3/15/2003)
* \r\n converts to newline in both label Text and ValidateText
* New browse dialog style (modern)
* Word wrapping for check boxes and radio buttons
* No ugly border for edit fields under XP
* Scroll bar for list boxes
* Works with SetStaticBkColor
* DISABLED dir and file request fields now disable the browse button too
* No more STATE value for labels
* Minor fixes

DLL version 2.0 (1/4/2003)
* Supports custom font and DPI settings (by Joost Verburg)
* INI files should contain dialog units now, no pixels (by Joost Verburg)
* RESIZETOFIT flag for Bitmap control (by Amir Szekely)
* New documentation (by Joost Verburg)
* New GROUP/NOTABSTOP/DISABLED flags

DLL version 1.7 beta (11/2/2002) 
* Added initDialog and show DLL functions

DLL version 1.6 beta (9/30/2002)
* CancelConfirmIcon becomes CancelConfirmFlags and can now take the other common MessageBox flags

DLL version 1.5 beta (9/26/2002) 
* Made close [x] button behave like Cancel (thanks brainsucker)

DLL version 1.4 beta (9/4/2002)
* Added Icon and Bitmap controls (by Amir Szekely)

DLL version 1.3 beta (8/15/2002)
* Added CancelShow (by ORTIM) 
* Added pixel transformation for widgets (by ORTIM)

DLL version 1.2 beta (7/31/2002)
* Added CancelEnabled (by ORTIM)
* Added CancelConfirmCaption and CancelConfirmIcon (by Amir Szekely) 

DLL version 1.1 beta (7/22/2002)
* Font is now taken from the main NSIS window (by Amir Szekely)

DLL version 1.0 beta (12/16/2001)
* Moved to DLL, no longer need parentwnd ini writing 
* Tons of changes - no longer fully compatible (see source for a big list) 
* removed support for silent installers (it seems the old version would bring up it's own dialog) 

version 1.4 (11/18/2001)
* Added Listbox controls. 
* Added MULTISELECT flag. 