@@ -3,6 +3,7 @@ DLL version 2.2 (6/10/2003)
 * Support for multiline edit box
 * Better tab order in DirRequest and FileRequest
 * Added READONLY option to text box
+* Added New control type LINK
 * Minor fixes
 
 DLL version 2.1 (3/15/2003)
